# python-template

./: .gitignore  copier.yml  pyproject.toml
project/: .gitignore.jinja  Makefile.jinja  README.md.jinja  pyproject.toml.jinja
project/scripts/: post_generation.py
project/src/{{python_module_name}}/: __main__.py.jinja  cli.py.jinja
project/tests/: __init__.py.jinja  conftest.py  test_cli.py.jinja  test_nothing.py
